--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -15,8 +15,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:layout_height="wrap_content"
             app:popupTheme="@style/AppTheme.PopupOverlay" >
 
             <TextView
@@ -31,6 +30,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_event" />
+    <include layout="@layout/events_view" android:id="@+id/eventsView" />
 
 </android.support.design.widget.CoordinatorLayout>
