--- a/app/src/main/res/layout/area_view.xml
+++ b/app/src/main/res/layout/area_view.xml
@@ -9,11 +9,34 @@
     tools:showIn="@layout/events_view"
     >
 
+    <LinearLayout
+        android:id="@+id/areaViewHeader"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/areaBackButton"
+            style="@android:style/Widget.Holo.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="?attr/actionModeCloseDrawable"
+            android:contentDescription="@string/areaViewBackButton" />
+
+        <TextView
+            android:id="@+id/currentAreaHeaderText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="@string/app_name"
+            android:textAppearance="@android:style/TextAppearance.Material.Large" />
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/bodyImageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="@android:color/transparent"
         android:contentDescription="@string/human_body_image"
@@ -22,9 +45,12 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/partsList"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/bodyImageView"
-        android:layout_centerHorizontal="true" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/areaViewHeader"
+        android:layout_above="@+id/eventsBar"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="10dp"
+        android:scrollbars="vertical" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/eventsBar"
@@ -37,12 +63,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/areaBackButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        app:srcCompat="@android:drawable/ic_menu_revert" />
+
 
 </RelativeLayout>
