--- a/app/src/main/res/layout/area_item_view.xml
+++ b/app/src/main/res/layout/area_item_view.xml
@@ -3,4 +3,6 @@
     style="@style/TextAppearance.AppCompat.Large"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:drawableStart="@android:drawable/ic_menu_more"
+    android:textColor="@color/colorAccent"
     android:text="@string/app_name" />
