--- a/app/src/main/res/layout/area_view.xml
+++ b/app/src/main/res/layout/area_view.xml
@@ -20,6 +20,7 @@
             style="@android:style/Widget.Holo.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:tint="@color/colorAccent"
             app:srcCompat="?attr/actionModeCloseDrawable"
             android:contentDescription="@string/areaViewBackButton" />
 
@@ -28,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
+            android:textColor="@color/colorAccent"
             android:text="@string/app_name"
             android:textAppearance="@android:style/TextAppearance.Material.Large" />
     </LinearLayout>
