--- a/app/src/main/res/layout/event_form.xml
+++ b/app/src/main/res/layout/event_form.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.ewind.hl.view.EventForm xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     >
@@ -11,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp"
+        android:padding="20dp"
         android:background="@color/colorAccent"
         android:orientation="horizontal">
 
@@ -19,15 +18,13 @@
             android:id="@+id/eventImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:tint="@android:color/white"
-            app:srcCompat="@android:drawable/ic_menu_mylocation" />
+            android:src="@android:drawable/ic_menu_mylocation" />
 
         <TextView
             android:id="@+id/eventText"
-            android:layout_width="350dp"
-            android:layout_height="31dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:textColor="@android:color/white"
             style="@style/TextAppearance.AppCompat.Large"
