--- a/app/src/main/res/layout/event_button.xml
+++ b/app/src/main/res/layout/event_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.ewind.hl.view.EventButton xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ewind.hl.ui.view.EventButton xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingStart="5dp"
@@ -25,4 +25,4 @@
         android:text="@string/app_name"
         style="@style/TextAppearance.AppCompat.Small"/>
 
-</com.ewind.hl.view.EventButton>
+</com.ewind.hl.ui.view.EventButton>
