--- a/app/src/main/res/layout/event_form.xml
+++ b/app/src/main/res/layout/event_form.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    >
+    android:background="@android:color/white">
 
     <LinearLayout
         android:id="@+id/eventHeader"
@@ -12,62 +11,63 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:padding="20dp"
         android:background="@color/colorAccent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:padding="5dp">
 
         <ImageView
             android:id="@+id/eventImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:tint="@android:color/white"
-            android:src="@android:drawable/ic_menu_mylocation" />
+            android:src="@android:drawable/ic_menu_mylocation"
+            android:tint="@android:color/white" />
 
         <TextView
             android:id="@+id/eventText"
+            style="@style/TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:textColor="@android:color/white"
-            style="@style/TextAppearance.AppCompat.Large"
-            android:text="@string/empty" />
+            android:text="@string/empty"
+            android:textColor="@android:color/white" />
 
-    </LinearLayout>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="10"/>
 
-    <FrameLayout
-        android:id="@+id/eventDetailContainer"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/eventHeader"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-    </FrameLayout>
-
-    <LinearLayout
-        android:id="@+id/eventFooter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:orientation="horizontal">
-
-        <Button
+        <TextView
             android:id="@+id/cancelButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:textColor="@color/colorAccent"
-            android:text="@android:string/cancel"/>
+            android:textColor="@android:color/white"
+            android:text="@android:string/cancel" />
 
-        <Button
+        <TextView
             android:id="@+id/okButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorAccent"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:text="@android:string/ok"/>
+            android:textColor="@android:color/white"
+            android:paddingStart="15dp"
+            android:paddingEnd="10dp"
+            android:text="@android:string/ok" />
 
     </LinearLayout>
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/eventHeader"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <FrameLayout
+            android:id="@+id/eventDetailContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </FrameLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
