--- a/app/src/main/res/layout/event_search.xml
+++ b/app/src/main/res/layout/event_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ewind.hl.ui.view.EventSearchView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="200dp"
     android:orientation="vertical">
@@ -11,9 +11,9 @@
         android:inputType="text"
         android:hint="@string/search"/>
     
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/eventsList"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"/>
 
-</LinearLayout>
+</com.ewind.hl.ui.view.EventSearchView>
