--- a/app/src/main/res/layout/event_search.xml
+++ b/app/src/main/res/layout/event_search.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.ewind.hl.ui.view.EventSearchView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
+    android:minHeight="200dp"
+    android:maxHeight="200dp"
     android:orientation="vertical">
 
-    <EditText
+    <SearchView
         android:id="@+id/eventFilter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,6 +16,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/eventsList"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </com.ewind.hl.ui.view.EventSearchView>
