--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -24,6 +24,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
                 android:textAlignment="textStart"
+                android:textColor="@color/colorPrimaryNegative"
                 android:textAppearance="@android:style/TextAppearance.Material.Large" />
 
         </android.support.v7.widget.Toolbar>
@@ -101,7 +102,7 @@
                 android:layout_gravity="end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/Widget.AppCompat.Button.Borderless"∂
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:onClick="onEventSearch"
                 android:src="@android:drawable/ic_menu_search"/>
 
