--- a/app/src/main/res/layout/history_chart.xml
+++ b/app/src/main/res/layout/history_chart.xml
@@ -16,65 +16,37 @@
         android:gravity="center_vertical"
         android:padding="5dp">
 
-        <ImageView
-            android:id="@+id/eventImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_mylocation"
-            android:tint="@android:color/white" />
-
         <TextView
-            android:id="@+id/eventText"
+            android:id="@+id/historyChartDates"
             style="@style/TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/empty"
+            android:text="@string/historyChartDates"
             android:textColor="@android:color/white" />
-
-        <ImageView
-            android:id="@+id/eventHistory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_more"
-            android:tint="@android:color/white" />
 
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="10"/>
 
-        <TextView
-            android:id="@+id/cancelButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:text="@android:string/cancel" />
 
-        <TextView
-            android:id="@+id/okButton"
+        <ImageView
+            android:id="@+id/eventFormButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:paddingStart="15dp"
-            android:paddingEnd="10dp"
-            android:text="@android:string/ok" />
+            android:src="@android:drawable/ic_menu_more"
+            android:tint="@android:color/white" />
 
     </LinearLayout>
 
-    <ScrollView
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/historyChart"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@id/eventHeader"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <FrameLayout
-            android:id="@+id/eventDetailContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        </FrameLayout>
-    </ScrollView>
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
