--- a/app/src/main/res/layout/event_search.xml
+++ b/app/src/main/res/layout/event_search.xml
@@ -15,6 +15,7 @@
     
     <android.support.v7.widget.RecyclerView
         android:id="@+id/eventsList"
+        android:scrollbars="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
