--- a/app/src/main/res/layout/history_chart.xml
+++ b/app/src/main/res/layout/history_chart.xml
@@ -34,7 +34,7 @@
             android:id="@+id/eventFormButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_more"
+            android:src="@drawable/ic_body"
             android:tint="@android:color/white" />
 
     </LinearLayout>
