--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -22,8 +22,8 @@
                 android:id="@+id/eventTitleText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:textAlignment="textStart"
+                android:text="@string/eventTitleText"
+                android:textAlignment="center"
                 android:textColor="@color/colorPrimaryNegative"
                 android:textAppearance="@android:style/TextAppearance.Material.Large" />
 
@@ -31,84 +31,21 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.constraint.ConstraintLayout
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_gravity="bottom|end"
+        android:onClick="onEventAdd"
+        android:src="@drawable/ic_add"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/eventsList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="15dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".MainActivity"
-        tools:showIn="@layout/main_activity">
-
-        <RelativeLayout
-            android:id="@+id/eventHeader"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageButton
-                android:id="@+id/areaBackButton"
-                style="@android:style/Widget.Holo.Button.Borderless"
-                android:layout_width="30dp"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/areaViewBackButton"
-                android:paddingEnd="15dp"
-                android:paddingStart="15dp"
-                android:tint="@color/colorAccent"
-                app:srcCompat="?attr/actionModeCloseDrawable" />
-
-            <TextView
-                android:id="@+id/currentAreaHeaderText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_toEndOf="@id/areaBackButton"
-                android:paddingEnd="5dp"
-                android:paddingStart="5dp"
-                android:text="@string/eventTitleText"
-                android:textAppearance="@android:style/TextAppearance.Material.Large"
-                android:textColor="@color/colorAccent" />
-
-            <com.ewind.hl.ui.view.EventDatePicker
-                android:id="@+id/eventDatePicker"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true" />
-        </RelativeLayout>
-
-        <FrameLayout
-            android:id="@+id/mainContentContainer"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/mainToolbar"
-            app:layout_constraintTop_toBottomOf="@+id/eventHeader" />
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/mainToolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" >
-
-            <LinearLayout
-                android:id="@+id/eventsBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            </LinearLayout>
-
-            <ImageButton
-                android:layout_gravity="end"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:tint="@color/colorAccent"
-                android:onClick="onEventSearch"
-                android:src="@android:drawable/ic_menu_search"/>
-
-        </android.support.v7.widget.Toolbar>
-
-    </android.support.constraint.ConstraintLayout>
+        tools:listitem="@layout/event_item">
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.design.widget.CoordinatorLayout>
