--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -10,13 +10,10 @@
         android:id="@+id/eventDetailContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:minHeight="100dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/eventDateTextView" >
-
-    </FrameLayout>
+        app:layout_constraintBottom_toTopOf="@id/eventDateTextView" />
 
     <TextView
         android:id="@+id/eventDateTextView"
