--- a/app/src/main/res/layout/event_date_picker.xml
+++ b/app/src/main/res/layout/event_date_picker.xml
@@ -1,32 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <Button
+    <ImageView
         android:id="@+id/eventDateBackButton"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="32dp"
-        android:layout_height="wrap_content"
-        android:layout_toStartOf="@+id/eventDatePickerButton"
-        android:text="@string/event_date_back_text" />
+        android:layout_width="24sp"
+        android:layout_height="24sp"
+        android:layout_gravity="center_vertical"
+        android:tint="@color/colorAccent"
+        android:src="@drawable/ic_back" />
 
     <Button
         android:id="@+id/eventDatePickerButton"
         style="@style/Widget.AppCompat.ActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:textColor="@color/colorAccent"
-        android:layout_toStartOf="@id/eventDateForwardButton"
+        android:textSize="24sp"
         android:text="@string/event_date_today" />
 
-    <Button
+    <ImageView
         android:id="@+id/eventDateForwardButton"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="32dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:text="@string/event_date_forward_text" />
-
-</merge>
+        android:layout_width="24sp"
+        android:layout_height="24sp"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_forward"
+        android:tint="@color/colorAccent" />
+</LinearLayout>
