--- a/app/src/main/res/layout/event_item_detail.xml
+++ b/app/src/main/res/layout/event_item_detail.xml
@@ -8,17 +8,18 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        app:srcCompat="@drawable/ic_temperature"
+        android:id="@+id/eventIcon"
+        android:layout_width="40sp"
+        android:layout_height="40sp"
+        android:layout_gravity="center_vertical"
+        app:srcCompat="@drawable/ic_event"
         android:tint="@color/colorAccent"/>
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/eventScoreTextView"
+        android:id="@+id/eventText"
         style="@style/TextAppearance.AppCompat.Large"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:textSize="32dp"
         android:text="36.6"
