--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:theme="@style/AppTheme"
     android:layout_margin="5dp"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <FrameLayout
         android:id="@+id/eventDetailContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/eventDateTextView" />
 
     <TextView
@@ -22,45 +22,21 @@
         style="@style/TextAppearance.AppCompat.Small"
         android:text="@string/empty"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/eventDetailContainer"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="10dp"
         />
 
-    <ImageView
+    <Button
+        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
         android:id="@+id/addButton"
-        android:layout_width="24dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_add"
+        android:text="How is it now?"
         android:tint="@color/colorAccent"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="10dp"
-        />
-
-    <ImageView
-        android:id="@+id/editButton"
-        android:layout_width="24dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_edit"
-        android:tint="@color/colorAccent"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toStartOf="@id/deleteButton"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <ImageView
-        android:id="@+id/deleteButton"
-        android:layout_width="24dp"
-        android:layout_height="wrap_content"
-        android:tint="@color/colorAccent"
-        android:src="@drawable/ic_delete"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         />
 
     <View
