--- a/app/src/main/res/layout/event_date_picker.xml
+++ b/app/src/main/res/layout/event_date_picker.xml
@@ -27,4 +27,10 @@
         android:layout_gravity="center_vertical"
         android:src="@drawable/ic_forward"
         android:tint="@color/colorAccent" />
+    <Spinner
+        android:id="@+id/eventDayPartSpinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:spinnerMode="dropdown"
+        />
 </LinearLayout>
