--- a/app/src/main/res/layout/activity_event_form.xml
+++ b/app/src/main/res/layout/activity_event_form.xml
@@ -55,7 +55,20 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/eventHeader"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+         />
+
+    <com.ewind.hl.ui.view.body.AreaSelector
+        android:id="@+id/areaSelector"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="15sp"
+        android:paddingEnd="15sp"
+        app:layout_constraintTop_toBottomOf="@id/eventDatePicker"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
     <FrameLayout
         android:id="@+id/eventDetailContainer"
@@ -64,7 +77,7 @@
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/eventDatePicker" />
+        app:layout_constraintTop_toBottomOf="@id/areaSelector" />
 
 
     <android.support.v7.widget.Toolbar
