--- a/app/src/main/res/layout/activity_event_form.xml
+++ b/app/src/main/res/layout/activity_event_form.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.EventFormActivity">
 
     <LinearLayout
         android:id="@+id/eventHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:background="@color/colorAccent"
         android:gravity="center_vertical"
         android:orientation="horizontal"
@@ -42,67 +41,62 @@
             android:id="@+id/deleteButton"
             android:layout_width="30sp"
             android:layout_height="30sp"
-            android:padding="5sp"
             android:onClick="onDelete"
+            android:padding="5sp"
             android:src="@drawable/ic_delete"
             android:tint="@android:color/white" />
 
     </LinearLayout>
 
-    <com.ewind.hl.ui.view.EventDatePicker
-        android:id="@+id/eventDatePicker"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/eventHeader"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.ewind.hl.ui.view.EventDatePicker
+            android:id="@+id/eventDatePicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+             />
+
+        <com.ewind.hl.ui.view.area.AreaSelector
+            android:id="@+id/areaSelector"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingEnd="15sp"
+            android:paddingStart="15sp" />
+
+        <FrameLayout
+            android:id="@+id/eventDetailContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="10"
          />
 
-    <com.ewind.hl.ui.view.body.AreaSelector
-        android:id="@+id/areaSelector"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="15sp"
-        android:paddingEnd="15sp"
-        app:layout_constraintTop_toBottomOf="@id/eventDatePicker"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/footer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <FrameLayout
-        android:id="@+id/eventDetailContainer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+            <Button
+                android:id="@+id/cancelButton"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@android:string/cancel" />
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/areaSelector" />
+            <Button
+                android:id="@+id/okButton"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:paddingEnd="10dp"
+                android:paddingStart="15dp"
+                android:text="@android:string/ok" />
 
+        </android.support.v7.widget.Toolbar>
+    </LinearLayout>
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/footer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <Button
-            android:id="@+id/cancelButton"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@android:string/cancel" />
-
-        <Button
-            android:id="@+id/okButton"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:paddingEnd="10dp"
-            android:paddingStart="15dp"
-            android:text="@android:string/ok" />
-
-    </android.support.v7.widget.Toolbar>
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
