--- a/app/src/main/res/layout/history_chart.xml
+++ b/app/src/main/res/layout/history_chart.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@android:color/white"
+    tools:context=".ui.history.HistoryActivity">
 
     <LinearLayout
         android:id="@+id/eventHeader"
