--- a/app/src/main/res/layout/activity_event_type_search.xml
+++ b/app/src/main/res/layout/activity_event_type_search.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.ewind.hl.ui.view.EventSearchView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:minHeight="200dp"
-    android:maxHeight="200dp"
-    android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="10dp"
+    android:orientation="vertical"
+    tools:context=".ui.EventTypeSearchActivity">
 
     <SearchView
         android:id="@+id/eventFilter"
@@ -12,11 +13,11 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:hint="@string/search"/>
-    
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/eventsList"
         android:scrollbars="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-</com.ewind.hl.ui.view.EventSearchView>
+</LinearLayout>
