--- a/app/src/main/res/layout/area_item_view.xml
+++ b/app/src/main/res/layout/area_item_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/TextAppearance.AppCompat.Large"
+    android:textAppearance="?android:attr/textAppearanceLarge"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:drawableStart="@android:drawable/ic_menu_more"
