--- a/app/src/main/res/layout/event_button.xml
+++ b/app/src/main/res/layout/event_button.xml
@@ -10,9 +10,9 @@
 
     <ImageView
         android:id="@+id/eventImage"
-        android:layout_width="30sp"
-        android:layout_height="30sp"
-        android:padding="5sp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_margin="5sp"
         android:tint="@color/colorAccent"
         android:src="@drawable/ic_event"
         android:contentDescription="@string/empty" />
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed"
-        android:text="@string/app_name"
-        style="@style/TextAppearance.AppCompat.Small"/>
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/app_name"/>
 
 </LinearLayout>
