--- a/app/src/main/res/drawable-xxxhdpi/ic_severity_0.xml
+++ b/app/src/main/res/drawable-xxxhdpi/ic_severity_0.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <stroke
-        android:width="15dp"
-        android:color="@android:color/darker_gray" />
-    <!-- Set the same value for both width and height to get a circular shape -->
+    <solid android:color="@color/severity0"/>
     <size
         android:width="250dp"
         android:height="250dp" />
